fixed colour/contrast ratios for accessiblity compliance

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -591,7 +591,7 @@ textarea {
 }
 
 .skill-text h3 {
-    color: #2196f3;
+    color: #0C6FBD;
     font-size: 20px;
     font-weight: 400;
     text-transform: uppercase;
